--- a/fortran/makefile
+++ b/fortran/makefile
@@ -1,8 +1,19 @@
 # run
-fortran: fortran_compile fortran_run
+run: fortran_compile fortran_run
 # compile fortran
 fortran_compile: 
 	gfortran fortran.f90
 # fun fortran
 fortran_run: 
 	./a.out
+
+git: git_add git_commit git_push
+
+git_add:
+	git add -A
+
+git_commit:
+	git commit -m "[AUTO]"
+
+git_push:
+	git push
