--- a/fortran/makefile
+++ b/fortran/makefile
@@ -1,10 +1,10 @@
 # run
 fortran: fortran_compile fortran_run
 # compile fortran
-fortran_compile: 
-	gfortran fortran.f90
+fortran_compile:
+	gfortran -Wall logs.f95
 # fun fortran
-fortran_run: 
+fortran_run:
 	./a.out
 
 # github
